# sysmonitor

./: Cargo.toml  README.md  start.cmd  usage.db
src/: main.rs
web/: index.html
web/static/: script.js  style.css
